--- a/khaitriag.edu.vn/dangkytructuyen/index.html
+++ b/khaitriag.edu.vn/dangkytructuyen/index.html
@@ -371,7 +371,7 @@
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-71bf57d elementor-widget elementor-widget-html" data-id="71bf57d" data-element_type="widget" data-widget_type="html.default">
 				<div class="elementor-widget-container">
-			<iframe loading="lazy" src="https://docs.google.com/forms/d/e/1FAIpQLSdgmZit5PrSTOjxWZwjK-GyvCQOGIL3fqtjvOBm1Pjp3X0f1w/viewform?embedded=true" width="640" height="2100" frameborder="0" marginheight="0" marginwidth="0">Đang tải…</iframe>		</div>
+			<iframe loading="lazy" src="https://forms.gle/vfxHhUTpzmdcRMqU8" width="640" height="2100" frameborder="0" marginheight="0" marginwidth="0">Đang tải…</iframe>		</div>
 				</div>
 					</div>
 		</div>
